2009-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* MacUpdater.cs:
	* UpdateDialog.cs: Add workaround for updating older versions
	  of Mono that don't have updateinfo file. Clean up API.

2009-10-07  Michael Hutchinson  <mhutchinson@novell.com>

	* MacUpdater.cs: Tidy up.

2009-10-07  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MacPlatform.addin.xml: Bump MD version.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs: Fix closure capturing var from loop. Tweak
	  spacing.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Fix label
	  alignment.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs: Make textviews noneditable. Fix margins and
	  wrapping.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs: Tweak presentation of release notes.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* MacUpdater.cs:
	* UpdateDialog.cs: Better presentation of older releases.
	  Tweak packing.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs:
	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Tweak frames.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs: Add frames around the updates.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs:
	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Restore the
	  info label.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Commands.cs:
	* MacPlatform.cs:
	* MacPlatform.addin.xml: Use a proper startup command handler.

	* MacUpdater.cs:
	* UpdateDialog.cs:
	* gtk-gui/gui.stetic:
	* gtk-gui/MonoDevelop.Platform.UpdateDialog.cs: Simplify
	  dialog and show it down there are no updates.

2009-10-01  Michael Hutchinson  <mhutchinson@novell.com>

	* UpdateDialog.cs: